# python-sixel

./: README.md  pyproject.toml  setup.py
examples/: converter.py  matplotlib_example.py  plot.py
sixel/: __init__.py  cellsize.py  converter.py  sixel.py  sixel_cimpl.c
